fix: update tts.patch to receive notifications about browser context destruction

--- a/chromium_src/BUILD.gn
+++ b/chromium_src/BUILD.gn
@@ -33,6 +33,7 @@ static_library("chrome") {
   ]
   deps = [
     "//chrome/common",
+    "//components/keyed_service/content",
     "//components/proxy_config",
     "//components/security_state/content",
   ]
