fix: extend browser process from chrome layer
The global state g_browser_process is shared between //chrome
and //electron.

--- a/chromium_src/BUILD.gn
+++ b/chromium_src/BUILD.gn
@@ -9,6 +9,8 @@ import("//third_party/widevine/cdm/widevine.gni")
 static_library("chrome") {
   visibility = [ "//electron:electron_lib" ]
   sources = [
+    "//chrome/browser/browser_process.cc",
+    "//chrome/browser/browser_process.h",
     "//chrome/browser/icon_loader.cc",
     "//chrome/browser/icon_loader.h",
     "//chrome/browser/icon_loader_mac.mm",
